src/core/c_api/itscam_sdk_c.h

/**
 * @brief Get the last error message.
 * @return Error message string (thread-local, valid until next SDK call).
 */
ITSCAM_C_API const char* ITSCAM_getLastError(void);