src/wrappers/csharp/Itscam.Sdk/Native/NativeMethods.cs


        [DllImport(Lib, EntryPoint = "ITSCAM_CgiClient_setVerifyServerCertificate",
                   CallingConvention = CallingConvention.Cdecl)]
        internal static extern void Cgi_setVerifyServerCertificate(IntPtr c,
            int verify);

        [DllImport(Lib, EntryPoint = "ITSCAM_CgiClient_setClientCertificate",
                   CallingConvention = CallingConvention.Cdecl,
                   CharSet = CharSet.Ansi, BestFitMapping = false)]
        internal static extern void Cgi_setClientCertificate(IntPtr c,
            [MarshalAs(UnmanagedType.LPStr)] string certPem,
            [MarshalAs(UnmanagedType.LPStr)] string keyPem);

        [DllImport(Lib, EntryPoint = "ITSCAM_CgiClient_login",
                   CallingConvention = CallingConvention.Cdecl,
                   CharSet = CharSet.Ansi, BestFitMapping = false)]
        internal static extern NativeErrorCode Cgi_login(IntPtr c,
            [MarshalAs(UnmanagedType.LPStr)] string user,
            [MarshalAs(UnmanagedType.LPStr)] string pass, uint timeoutMs);

        [DllImport(Lib, EntryPoint = "ITSCAM_CgiClient_setAuthToken",
                   CallingConvention = CallingConvention.Cdecl,
                   CharSet = CharSet.Ansi, BestFitMapping = false)]
        internal static extern void Cgi_setAuthToken(IntPtr c,
            [MarshalAs(UnmanagedType.LPStr)] string token);

        [DllImport(Lib, EntryPoint = "ITSCAM_CgiClient_clearAuthToken",
                   CallingConvention = CallingConvention.Cdecl)]
        internal static extern void Cgi_clearAuthToken(IntPtr c);

        [DllImport(Lib, EntryPoint = "ITSCAM_CgiClient_getLastFrame",
                   CallingConvention = CallingConvention.Cdecl)]
        internal static extern NativeErrorCode Cgi_getLastFrame(IntPtr c,
            uint timeoutMs, out IntPtr outImage);

        [StructLayout(LayoutKind.Sequential)]
        internal struct NativeSnapshotRequest
        {
            public IntPtr shutters;        // int32_t*
            public UIntPtr shuttersLen;
            public IntPtr gains;           // int32_t*
            public UIntPtr gainsLen;
            public int quality;
            public int mosaic;
            public IntPtr format;          // const char*
            public int scenario;
            public IntPtr crop;
            public IntPtr textOverlay;
            public IntPtr userMetadataKeys;   // const char**
            public IntPtr userMetadataValues; // const char**
        }

        [DllImport(Lib, EntryPoint = "ITSCAM_CgiClient_getSnapshot",
                   CallingConvention = CallingConvention.Cdecl)]
        internal static extern NativeErrorCode Cgi_getSnapshot(IntPtr c,
            ref NativeSnapshotRequest request, uint timeoutMs,
            out IntPtr outImages);

        // MJPEG stream callback signature
        [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
        internal delegate void NativeStreamCallback(IntPtr framePtr,
                                                    IntPtr userData);

        [StructLayout(LayoutKind.Sequential)]
        internal struct NativeStreamFrame
        {
            public ulong sequence;
            public IntPtr mimeType;
            public IntPtr data;
            public UIntPtr dataLen;
        }

        [DllImport(Lib, EntryPoint = "ITSCAM_CgiClient_startMjpegStream",
                   CallingConvention = CallingConvention.Cdecl)]
        internal static extern NativeErrorCode Cgi_startMjpegStream(IntPtr c,
            NativeStreamCallback callback, IntPtr userData, uint timeoutMs);

        [DllImport(Lib, EntryPoint = "ITSCAM_CgiClient_stopMjpegStream",
                   CallingConvention = CallingConvention.Cdecl)]
        internal static extern void Cgi_stopMjpegStream(IntPtr c);

        [DllImport(Lib, EntryPoint = "ITSCAM_CgiClient_isMjpegStreamRunning",
                   CallingConvention = CallingConvention.Cdecl)]
        internal static extern int Cgi_isMjpegStreamRunning(IntPtr c);

        [DllImport(Lib, EntryPoint = "ITSCAM_CgiClient_forceTrigger",
                   CallingConvention = CallingConvention.Cdecl)]
        internal static extern NativeErrorCode Cgi_forceTrigger(IntPtr c,
            uint timeoutMs, out IntPtr outResponse);

        [DllImport(Lib, EntryPoint = "ITSCAM_CgiClient_reboot",
                   CallingConvention = CallingConvention.Cdecl)]
        internal static extern NativeErrorCode Cgi_reboot(IntPtr c,
            uint timeoutMs, out IntPtr outResponse);

        // ====================================================================
        //  Shared accessors
        // ====================================================================

        [DllImport(Lib, EntryPoint = "ITSCAM_String_data",
                   CallingConvention = CallingConvention.Cdecl)]
        internal static extern IntPtr String_data(IntPtr s);

        [DllImport(Lib, EntryPoint = "ITSCAM_String_size",
                   CallingConvention = CallingConvention.Cdecl)]
        internal static extern UIntPtr String_size(IntPtr s);

        [DllImport(Lib, EntryPoint = "ITSCAM_String_destroy",
                   CallingConvention = CallingConvention.Cdecl)]
        internal static extern void String_destroy(IntPtr s);

        [DllImport(Lib, EntryPoint = "ITSCAM_CgiImage_mimeType",
                   CallingConvention = CallingConvention.Cdecl)]
        internal static extern IntPtr CgiImage_mimeType(IntPtr img);

        [DllImport(Lib, EntryPoint = "ITSCAM_CgiImage_data",
                   CallingConvention = CallingConvention.Cdecl)]
        internal static extern IntPtr CgiImage_data(IntPtr img);

        [DllImport(Lib, EntryPoint = "ITSCAM_CgiImage_size",
                   CallingConvention = CallingConvention.Cdecl)]
        internal static extern UIntPtr CgiImage_size(IntPtr img);

        [DllImport(Lib, EntryPoint = "ITSCAM_CgiImage_destroy",
                   CallingConvention = CallingConvention.Cdecl)]
        internal static extern void CgiImage_destroy(IntPtr img);

        [DllImport(Lib, EntryPoint = "ITSCAM_CgiImageArray_size",
                   CallingConvention = CallingConvention.Cdecl)]
        internal static extern UIntPtr CgiImageArray_size(IntPtr arr);

        [DllImport(Lib, EntryPoint = "ITSCAM_CgiImageArray_get",
                   CallingConvention = CallingConvention.Cdecl)]
        internal static extern IntPtr CgiImageArray_get(IntPtr arr,
            UIntPtr index);

        [DllImport(Lib, EntryPoint = "ITSCAM_CgiImageArray_destroy",
                   CallingConvention = CallingConvention.Cdecl)]
        internal static extern void CgiImageArray_destroy(IntPtr arr);

        // ====================================================================
        //  Diagnostics
        // ====================================================================

        /// <summary>
        /// Thread-local last-error string from the native SDK.  Populated on
        /// every non-OK return; pointer is valid until the next SDK call on
        /// this thread.
        /// </summary>
        [DllImport(Lib, EntryPoint = "ITSCAM_getLastError",
                   CallingConvention = CallingConvention.Cdecl)]
        internal static extern IntPtr GetLastErrorPtr();

        /// <summary>
        /// Copy the thread-local last-error string into a managed
        /// <see cref="string"/>.  Safe to call after any failing SDK call.
        /// </summary>
        internal static string GetLastErrorMessage()
        {
            return PtrToStringUtf8(GetLastErrorPtr());
        }

        // ====================================================================
        //  Marshalling helpers
        // ====================================================================

        /// <summary>Pull a UTF-8 string out of a const char* native pointer.</summary>
        internal static string PtrToStringUtf8(IntPtr ptr)
        {
            if (ptr == IntPtr.Zero) return string.Empty;
            int len = 0;
            while (Marshal.ReadByte(ptr, len) != 0) ++len;
            if (len == 0) return string.Empty;
            byte[] buffer = new byte[len];
            Marshal.Copy(ptr, buffer, 0, len);
            return System.Text.Encoding.UTF8.GetString(buffer);
        }

        /// <summary>
        /// Allocate a NUL-terminated UTF-8 buffer for the supplied string.
        /// Caller must release it with <see cref="FreeUtf8(IntPtr)"/>.
        /// </summary>
        internal static IntPtr AllocUtf8(string s)
        {
            if (s == null) s = string.Empty;
            byte[] utf8 = System.Text.Encoding.UTF8.GetBytes(s);
            IntPtr ptr = Marshal.AllocHGlobal(utf8.Length + 1);
            if (utf8.Length > 0) Marshal.Copy(utf8, 0, ptr, utf8.Length);
            Marshal.WriteByte(ptr, utf8.Length, 0);
            return ptr;
        }

        internal static void FreeUtf8(IntPtr ptr)
        {
            if (ptr != IntPtr.Zero) Marshal.FreeHGlobal(ptr);
        }

        internal static string TakeString(IntPtr stringHandle)
        {
            if (stringHandle == IntPtr.Zero) return string.Empty;
            try
            {
                IntPtr data = String_data(stringHandle);
                return PtrToStringUtf8(data);
            }
            finally
            {
                String_destroy(stringHandle);
            }
        }

        internal static byte[] CopyBytes(IntPtr ptr, int length)
        {
            if (ptr == IntPtr.Zero || length <= 0) return Array.Empty<byte>();
            byte[] buffer = new byte[length];
            Marshal.Copy(ptr, buffer, 0, length);
            return buffer;
        }
    }
}
